include date as part of user data and display in previous workouts

--- a/levo/levo/Base.lproj/Main.storyboard
+++ b/levo/levo/Base.lproj/Main.storyboard
@@ -141,7 +141,7 @@
                                 </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="BuQ-Pt-X5u">
-                                <rect key="frame" x="0.0" y="94" width="414" height="718"/>
+                                <rect key="frame" x="0.0" y="124" width="414" height="688"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <connections>
                                     <outlet property="dataSource" destination="JlH-rG-YvA" id="lIa-Na-K61"/>
@@ -154,22 +154,31 @@
                                 <color key="textColor" systemColor="systemOrangeColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qhh-TH-gv6">
+                                <rect key="frame" x="190.5" y="100.5" width="33" height="15"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
+                                <color key="textColor" red="0.098039215690000001" green="0.2274509804" blue="0.43529411759999997" alpha="0.8980392157" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="LZf-bg-4sr"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="qhh-TH-gv6" firstAttribute="centerX" secondItem="ipp-7Y-Z3I" secondAttribute="centerX" id="3E4-hB-i1s"/>
                             <constraint firstItem="h5w-aY-Nev" firstAttribute="leading" secondItem="LZf-bg-4sr" secondAttribute="leading" constant="20" id="5yu-X3-2U5"/>
                             <constraint firstItem="TWU-hi-BtC" firstAttribute="top" secondItem="LZf-bg-4sr" secondAttribute="top" constant="20" id="7cN-Cq-GVe"/>
                             <constraint firstItem="TWU-hi-BtC" firstAttribute="centerX" secondItem="ipp-7Y-Z3I" secondAttribute="centerX" id="DNr-cV-esF"/>
                             <constraint firstItem="LZf-bg-4sr" firstAttribute="trailing" secondItem="BuQ-Pt-X5u" secondAttribute="trailing" id="MZH-Y6-yzg"/>
                             <constraint firstItem="h5w-aY-Nev" firstAttribute="top" secondItem="LZf-bg-4sr" secondAttribute="top" constant="20" id="bZg-b4-7wD"/>
+                            <constraint firstItem="qhh-TH-gv6" firstAttribute="top" secondItem="TWU-hi-BtC" secondAttribute="bottom" constant="5" id="caC-zN-bvt"/>
                             <constraint firstItem="LZf-bg-4sr" firstAttribute="bottom" secondItem="BuQ-Pt-X5u" secondAttribute="bottom" constant="50" id="skb-Ne-5hi"/>
                             <constraint firstItem="BuQ-Pt-X5u" firstAttribute="leading" secondItem="LZf-bg-4sr" secondAttribute="leading" id="vwr-cG-GsG"/>
-                            <constraint firstItem="BuQ-Pt-X5u" firstAttribute="top" secondItem="LZf-bg-4sr" secondAttribute="top" constant="50" id="yoo-H2-0Mf"/>
+                            <constraint firstItem="BuQ-Pt-X5u" firstAttribute="top" secondItem="LZf-bg-4sr" secondAttribute="top" constant="80" id="yoo-H2-0Mf"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="backBtn" destination="h5w-aY-Nev" id="NAX-W0-ajG"/>
+                        <outlet property="subTitle" destination="qhh-TH-gv6" id="nEn-FV-n0t"/>
                         <outlet property="titleLbl" destination="TWU-hi-BtC" id="1Eg-nH-jDa"/>
                     </connections>
                 </viewController>
@@ -608,7 +617,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ZX8-Wo-S18">
-                                <rect key="frame" x="0.0" y="94" width="414" height="718"/>
+                                <rect key="frame" x="0.0" y="124" width="414" height="688"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <connections>
                                     <outlet property="dataSource" destination="g38-cQ-PAz" id="v9C-Gs-Cg0"/>
@@ -623,25 +632,34 @@
                                     <action selector="goBack" destination="g38-cQ-PAz" eventType="touchUpInside" id="fde-XZ-Tdo"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t6V-Eg-Gxc">
+                                <rect key="frame" x="174" y="64" width="66.5" height="31.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
+                                <color key="textColor" systemColor="systemOrangeColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="wnC-H0-Fhv"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="ZX8-Wo-S18" firstAttribute="leading" secondItem="wnC-H0-Fhv" secondAttribute="leading" id="30M-FH-uZs"/>
+                            <constraint firstItem="t6V-Eg-Gxc" firstAttribute="top" secondItem="wnC-H0-Fhv" secondAttribute="top" constant="20" id="AgP-mo-2Wx"/>
                             <constraint firstItem="wnC-H0-Fhv" firstAttribute="bottom" secondItem="ZX8-Wo-S18" secondAttribute="bottom" constant="50" id="EeZ-pj-vFf"/>
                             <constraint firstItem="wnC-H0-Fhv" firstAttribute="trailing" secondItem="ZX8-Wo-S18" secondAttribute="trailing" id="PBr-zk-kjo"/>
                             <constraint firstItem="BLH-vf-Pw4" firstAttribute="leading" secondItem="wnC-H0-Fhv" secondAttribute="leading" constant="20" id="SCI-y0-m3H"/>
+                            <constraint firstItem="t6V-Eg-Gxc" firstAttribute="centerX" secondItem="1PU-pp-5VQ" secondAttribute="centerX" id="Un3-qA-feS"/>
                             <constraint firstItem="BLH-vf-Pw4" firstAttribute="top" secondItem="wnC-H0-Fhv" secondAttribute="top" constant="20" id="WXH-3T-9ZU"/>
-                            <constraint firstItem="ZX8-Wo-S18" firstAttribute="top" secondItem="wnC-H0-Fhv" secondAttribute="top" constant="50" id="ZMO-yL-Bol"/>
+                            <constraint firstItem="ZX8-Wo-S18" firstAttribute="top" secondItem="wnC-H0-Fhv" secondAttribute="top" constant="80" id="ZMO-yL-Bol"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="backBtn" destination="BLH-vf-Pw4" id="CjD-MU-bhB"/>
+                        <outlet property="titleLbl" destination="t6V-Eg-Gxc" id="YPj-3T-Mdx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="340-i6-1p3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1452" y="38"/>
+            <point key="canvasLocation" x="-1452.1739130434785" y="37.5"/>
         </scene>
     </scenes>
     <resources>
